[HUDI-9472] Added working PoC for Expression Index